apps/eck/elasticsearch.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: elasticsearch
  namespace: cluster
spec:
  parentRefs:
    - name: gateway
      namespace: cluster
  hostnames:
    - elasticsearch.anyflow.net
  rules:
    - matches:
        - path:
            type: PathPrefix #Implementation-specific, PathPrefix, Exact
            value: /
      backendRefs:
        - name: elasticsearch-es-http
          port: 9200
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
