apps/eck/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: kibana
  namespace: cluster
spec:
  parentRefs:
    - name: default-gateway
      namespace: cluster
  hostnames:
    - kibana.anyflow.net
  rules:
    - matches:
        - path:
            type: PathPrefix #Implementation-specific, PathPrefix, Exact
            value: /
      backendRefs:
        - name: kibana-kb-http
          port: 5601
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
